Fixed the instructions page on mobile and fixed mobile menu issues

--- a/smallscreen.css
+++ b/smallscreen.css
@@ -1,6 +1,60 @@
 html {
   background-color: #e0dcaf;
 }
+.infoDiv {
+  display: none;
+}
+.infoMobile {
+  background-color: #e6e6e6;
+  display: inline-block;
+  text-align: center;
+  margin: 0 auto;
+  margin-top: 1%;
+  margin-bottom: 1%;
+  padding: 1%;
+  width: 95%;
+  float: left;
+  box-shadow: 0px 10px 10px -6px rgba(0,0,0,0.5),
+		          10px 0px 10px -6px rgba(0,0,0,0.5);
+}
+.exitBtn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: center;
+  width: 5%;
+  background-color: #990000;
+  font-family: 'Amita';font-size: 25px;
+}
+.exitBtn:hover {
+  background-color: #b30000;
+}
+.instructions {
+  background-color: rgba(217, 217, 217, 0.7);
+  padding: 10px;
+  display: none;
+  position: relative;
+  margin: auto;
+  border-radius: 10px;
+  width: 95%;
+  min-width: 100px;
+  z-index: 4;
+}
+#infoP {
+  color: black;
+}
+#createdBy {
+  text-align: center;
+  color: black;
+  font-family: 'Amita';font-size: 25px;
+}
+.createdBy {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  color: grey;
+  font-family: 'Amita';font-size: 25px;
+}
 input[type=text], select {
   width: 100%;
   font-family: 'Amita';font-size: 12px;
@@ -11,7 +65,15 @@ input[type=text], select {
 }
 label {
   color: white;
-  font-family: 'Amita';font-size: 16px;
+  font-family: 'Amita';font-size: 30px;
+}
+#hName {
+  width: 50%;
+  font-size: 25px;
+}
+#wName {
+  width: 50%;
+  font-size: 25px;
 }
 a {
   color: white;
